# python-package-blueprint

./: README.md  cookiecutter.json
{{cookiecutter.project_slug}}/: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
{{cookiecutter.project_slug}}/.github/workflows/: ci.yml
{{cookiecutter.project_slug}}/tests/: test_cli.py  test_schema.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: __init__.py  cli.py  schema.py
